infrastructure/base/network/network-policies/hister/allow-egress-authentik.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-authentik
spec:
  podSelector:
    matchLabels:
      app: hister
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: authentik
          podSelector:
            matchLabels:
              app.kubernetes.io/component: server
              app.kubernetes.io/name: authentik
      ports:
        - protocol: TCP
          port: 9000
